# ros_pub_and_sub_rgbd_and_cloud

./: .gitignore  CMakeLists.txt  README.md  package.xml  pub_rgbd_and_cloud.py  run_test_case.sh  sub_rgbd_and_cloud.py
config/: publisher_settings.yaml  rgbd_and_cloud.rviz  rgbd_pub_config.yaml
launch/: main_commands.txt  run_publisher.launch  run_rviz.launch
tests/: publisher_settings_2.yaml  publisher_settings_3.yaml  publisher_settings_4.yaml  rgbd_pub_config_2.yaml  rgbd_pub_config_3.yaml  rgbd_pub_config_4.yaml  testing_commands.txt
utils/: lib_commons.py  lib_cv.py  lib_rgbd.py  lib_ros_point_cloud_pub_and_sub.py  lib_ros_rgbd_pub_and_sub.py
